@@ -1,20 +1,23 @@
 <?xml version="1.0" encoding="utf-8" standalone="yes"?>
 <settings>
-	<category label="100028">
+	<category label="General">
         <setting id="username" type="text" label="100001" default="" />
         <setting id="password" type="text" label="100002" default="" option="hidden" />
         <setting type="sep" />
         <setting id="shortnames" type="bool" label="100020" default="true" />
-        <setting id="showscores" type="bool" label="100032" default="true" />
         <setting id="viewmode" type="labelenum" label="100037" values="Default|Big List|List|Thumbnail" default="Default" />
         <setting id="showfanart" type="bool" label="100034" default="false" />
     </category>
-	<category label="100040">
+	<category label="Live">
+        <setting id="showscores" type="bool" label="100032" default="true" />
+        <setting id="showaltlive" type="bool" label="Display Streams on Start Screen" default="false" />
+    </category>
+	<category label="OnDemand">
         <setting id="showhighlight" type="bool" label="100036" default="true" />
         <setting id="showcondensed" type="bool" label="100039" default="false" />
         <setting id="daysback" type="labelenum" label="100038" values="0|1|2|3|5|7|Disable" default="1" />
     </category>
-    <category label="100033">
+    <category label="Stream">
         <setting id="location" type="labelenum" label="100025" values="Auto|Asia|Australia|Europe|North America - Central|North America - East|North America - East Canada|North America - West" default="Auto" />
         <setting id="resolution" type="labelenum" label="100031" values="All|HD Only|SD Only" default="All" />
         <setting id="flash" type="bool" label="100017" default="false" />
