@@ -18,8 +18,10 @@ addonPath = addon.getAddonInfo('path')
 def HOME():
     print 'HOME()'
     utils.addDir(addon.getLocalizedString(100005), utils.Mode.ONDEMAND, '', None, 2, showfanart)
-    utils.addDir(addon.getLocalizedString(100006), utils.Mode.LIVE, '', None, 2, showfanart)
-    utils.addDir('[ Live / Coming Soon (Alternate) ]', utils.Mode.LIVEEVENT, '', None, 2, showfanart)
+    if showaltlive:
+        utils.addDir(addon.getLocalizedString(100006), utils.Mode.LIVEEVENT, '', None, 2, showfanart)
+    else:
+        utils.addDir(addon.getLocalizedString(100006), utils.Mode.LIVE, '', None, 2, showfanart)
 
     setViewMode()
 
@@ -1051,10 +1053,12 @@ password = addon.getSetting('password')
 resolution = addon.getSetting('resolution')
 shortNames = addon.getSetting('shortnames')
 shortNames = shortNames != None and shortNames.lower() == 'true'
-showscores = addon.getSetting('showscores')
-showscores = showscores != None and showscores.lower() == 'true'
 showfanart = addon.getSetting('showfanart')
 showfanart = showfanart != None and showfanart.lower() == 'true'
+showscores = addon.getSetting('showscores')
+showscores = showscores != None and showscores.lower() == 'true'
+showaltlive = addon.getSetting('showaltlive')
+showaltlive = showaltlive != None and showaltlive.lower() == 'true'
 showhighlight = addon.getSetting('showhighlight')
 showhighlight = showhighlight != None and showhighlight.lower() == 'true'
 showcondensed = addon.getSetting('showcondensed')
@@ -1159,6 +1163,8 @@ else:
 # Invoke mode function
 if mode == None or mode == utils.Mode.HOME:
     HOME()
+    updateListing = refresh
+    cacheToDisc = False
 elif mode == utils.Mode.ONDEMAND:
     ONDEMAND()
 elif mode == utils.Mode.ONDEMAND_BYDATE:
